# books-to-audio

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  debug_fb2_detail.py  debug_fb2_raw.py  fb2_detail.txt  fb2_paras.txt  install.bat  install.py  install.sh  pyproject.toml  requirements.txt  run_gui.bat  run_gui.sh  toc_titles.txt
comfyui_workflows/: qwen3_dialogue_template.json  qwen3_tts_template.EXAMPLE.json  qwen3_tts_template.json  voice_setup_template.json
data/: local_runtime_paths.example.json
docs/: REVIEW_CHEATSHEET.md  REVIEW_FAQ.md  REVIEW_RESULTS.md  REVIEW_TESTING.md  REVIEW_WORKFLOW.md  architecture.md  comfyui-setup.md  dependency-locks.md  manifest-v2.md  operator-guide.md  quality-status.md  release-process.md  security-privacy.md  smoke-test.md  troubleshooting.md
project-skills/: SOURCES.md
rules/: automation-boundaries.md  before-editing.md  cli-compatibility.md  code-organization.md  data-privacy.md  dependency-changes.md  error-handling.md  fresh-verification.md  git-workflow.md  portable-artifacts.md  production-readiness.md  repository-hygiene.md  state-and-status.md  testing-scope.md  tooling-preferences.md  ui-localization.md  ui-truthfulness.md  ui-verification.md  validation.md
scripts/: assemble_chapter.py  audit_dialogue_chunks.py  audit_tts_smoke.py  build_windows_desktop.py  check_wsl_env.sh  create_listening_checklist.py  export_chunks.py  fetch_quality_corpus.py  final_readiness_check.py  generate_voice_previews.py  gui_visual_audit.py  live_tts_smoke.py  prepare_listening_review.py  (+14 more)
(+343 files in other folders)
